[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/upgrade_card.gd" id="1"]

[node name="UpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(150, 180)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="IconLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
text = ">>>"

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
horizontal_alignment = 1
text = "Upgrade"

[node name="LevelLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
text = "Lv 0/5"

[node name="CostLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
text = "1000 pts"
